SlipOpinionProcessor/deployment.yaml
# This file configures the hello-world app which serves public web traffic.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slipopinionprocessor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slipopinionprocessor
  template:
    metadata:
      labels:
        app: slipopinionprocessor
    spec:
      containers:
      - name: slipopinionprocessor-app
        # Replace $GCLOUD_PROJECT with your project ID
        image: gcr.io/legalservices/slipopinionprocessor
        ports:
        - containerPort: 8080
          name: actuator
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: actuator
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: actuator
