SlipOpinionProcessor/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: kafka-1-vm
spec:
    ports:
        - protocol: TCP
          port: 9092
          targetPort: 9092
