SlipOpinionProcessor/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: legalservices-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: slipopinionprocessor-service
            port: 
              number: 8080
      - path: /api/statutes
        pathType: ImplementationSpecific
        backend:
          service:
            name: guidedsearchweb-service
            port:
              number: 8092
      - path: /api/user/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: opinionuserservice-service
            port:
              number: 8093
